--- a/ui/projects/streampipes/shared-ui/src/lib/dialog/standard-dialog/standard-dialog.component.scss
+++ b/ui/projects/streampipes/shared-ui/src/lib/dialog/standard-dialog/standard-dialog.component.scss
@@ -16,7 +16,7 @@
  *
  */
 
-@import 'src/scss/sp/colors';
+@import '../../../../../../../src/scss/sp/colors';
 
 standard-dialog-container {
   width: 100%;
