[STREAMPIPES-535] Support asymmetric JWT signatures

--- a/ui/src/app/configuration/security-configuration/security-configuration.component.html
+++ b/ui/src/app/configuration/security-configuration/security-configuration.component.html
@@ -41,4 +41,11 @@
         </sp-split-section>
     </div>
     <mat-divider></mat-divider>
+    <div fxFlex="100" fxLayout="column" fxLayoutAlign="start start">
+        <sp-split-section title="Authentication"
+                          subtitle="Auth & token settings">
+            <div class="subsection-title">JWT Signature</div>
+            <sp-authentication-configuration></sp-authentication-configuration>
+        </sp-split-section>
+    </div>
 </div>
