--- a/ui/src/app/add/add.component.html
+++ b/ui/src/app/add/add.component.html
@@ -23,51 +23,60 @@
                 <button mat-button mat-flat-button color="accent" (click)="showManageRdfEndpointsDialog()">Manage
                     Endpoints
                 </button>
-                <div fxFlex fxLayoutAlign="start center" [attr.id]="'peType'">
-                    <mat-tab-group [selectedIndex]="selectedCategoryIndex"
-                                   (selectedIndexChange)="setSelectedTab($event)" color="accent">
-                        <mat-tab label="All"></mat-tab>
-                        <mat-tab label="Data Sets"></mat-tab>
-                        <mat-tab label="Data Streams"></mat-tab>
-                        <mat-tab label="Data Processors"></mat-tab>
-                        <mat-tab label="Data Sinks"></mat-tab>
-                    </mat-tab-group>
-                </div>
             </div>
         </div>
     </div>
     <div fxLayout="row" class="fixed-height add-options sp-tab-bg">
         <div class="add-options-item pl-5" fxLayoutAlign="start center" fxLayout="row">
             <div fxFlex="100" fxLayout="row">
-                <button mat-button mat-raised-button color="accent"
-                        [disabled]="selectedEndpointItems.length === 0"
-                        (click)="installSelected()" class="mr-10">
+                <button mat-button mat-raised-button color="accent" [disabled]="selectedEndpointItems.length === 0"
+                    (click)="installSelected()" class="mr-10">
                     <i class="material-icons">cloud_download</i>
                     &nbsp;Install selected
                 </button>
-                <button mat-button mat-raised-button color="accent"
-                        [disabled]="selectedEndpointItems.length === 0"
-                        (click)="uninstallSelected()" class="mr-10">
+                <button mat-button mat-raised-button color="accent" [disabled]="selectedEndpointItems.length === 0"
+                    (click)="uninstallSelected()" class="mr-10">
                     <i class="material-icons">delete</i>
                     &nbsp;Uninstall selected
                 </button>
                 <button mat-button mat-icon-button color="accent" class="mr-10" (click)="selectAll(true)"
-                        matTooltip="Select all" matTooltipPosition="above">
+                    matTooltip="Select all" matTooltipPosition="above">
                     <i class="material-icons">queue</i>
                 </button>
                 <button mat-button mat-icon-button color="accent" class="mr-10" (click)="selectAll(false)"
-                        matTooltip="Select none" matTooltipPosition="above">
+                    matTooltip="Select none" matTooltipPosition="above">
                     <i class="material-icons">filter_none</i>
                 </button>
             </div>
         </div>
         <span fxFlex></span>
+        <div class="add-options-item" fxLayoutAlign="start center" fxLayout="row">
+            <mat-form-field color="accent">
+                <mat-select [(value)]="selectedCategory" 
+                (selectionChange)="filterByCatergory($event)" >
+                    <mat-option [value]="'all'">
+                        All 
+                    </mat-option>
+                    <mat-option [value]="'set'">
+                        Sets
+                    </mat-option>
+                    <mat-option [value]="'stream'">
+                        Streams
+                    </mat-option>
+                    <mat-option [value]="'sepa'">
+                        Processors
+                    </mat-option>
+                    <mat-option [value]="'action'">
+                        Sinks
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
         <div class="add-options-item pl-5" fxLayoutAlign="start center" fxLayout="row">
             <mat-icon>search</mat-icon>
 
             <mat-form-field class="form-style" color="accent">
-                <input matInput placeholder="Find Element" value="" [(ngModel)]="filterTerm"
-                       name="something">
+                <input matInput placeholder="Find Element" value="" [(ngModel)]="filterTerm" name="something">
             </mat-form-field>
         </div>
         <div class="add-options-item" fxLayoutAlign="start center" fxLayout="row">
@@ -86,26 +95,23 @@
             </mat-form-field>
         </div>
         <div class="add-options-item" fxLayoutAlign="start center" fxLayout="row">
-            <button mat-button mat-icon-button color="accent" (click)="getEndpointItems()"
-                    matTooltip="Reload items" matTooltipPosition="above">
+            <button mat-button mat-icon-button color="accent" (click)="getEndpointItems()" matTooltip="Reload items"
+                matTooltipPosition="above">
                 <mat-icon>refresh</mat-icon>
             </button>
         </div>
     </div>
 
     <div fxFlex="100" fxLayout="column" fxLayoutAlign="start start" class="page-container-padding-inner"
-         *ngIf="endpointItemsLoadingComplete">
+        *ngIf="endpointItemsLoadingComplete">
         <div fxLayoutAlign="start start" fxLayout="column">
 
         </div>
         <div fxLayout="row wrap" class="w-100">
-            <sp-endpoint-item fxFlex="33"
-                              [itemSelected]="endpointItem.selected"
-                              [item]="endpointItem"
-                              (triggerInstallation)="triggerInstallation($event)"
-                              *ngFor="let endpointItem of endpointItems | pipelineElementTypeFilter: selectedTab | pipelineElementNameFilter: filterTerm | pipelineElementInstallationStatusFilter: selectedInstallationStatus | orderBy: 'asc':'name'"
-                              class="p-15"
-                              (click)="toggleSelected(endpointItem)"></sp-endpoint-item>
+            <sp-endpoint-item fxFlex="33" [itemSelected]="endpointItem.selected" [item]="endpointItem"
+                (triggerInstallation)="triggerInstallation($event)"
+                *ngFor="let endpointItem of endpointItems | pipelineElementTypeFilter: selectedTab | pipelineElementNameFilter: filterTerm | pipelineElementInstallationStatusFilter: selectedInstallationStatus | orderBy: 'asc':'name'"
+                class="p-15" (click)="toggleSelected(endpointItem)"></sp-endpoint-item>
         </div>
     </div>
     <div fxFlex="100" fxLayout="row" fxLayoutAlign="center center" *ngIf="!endpointItemsLoadingComplete">
