--- a/ui/src/app/data-explorer/components/panel/data-explorer-dashboard-panel.component.html
+++ b/ui/src/app/data-explorer/components/panel/data-explorer-dashboard-panel.component.html
@@ -19,6 +19,13 @@
 <div fxLayout="column" class="page-container">
     <div fxLayout="column" fxFlex="100" *ngIf="dashboardLoaded">
         <div class="fixed-height data-explorer-options sp-tab-bg page-container-nav" fxLayout="row">
+                <button mat-button 
+                        mat-raised-button 
+                        matTooltip="Back" 
+                        (click)="goBackToOverview()"
+                        class="edit-menu-btn">
+                   <mat-icon>arrow_back</mat-icon>
+                </button>
             <div class="data-explorer-options-item pl-10" fxLayoutAlign="start center" fxLayout="row" *ngIf="editMode">
                 <button mat-button mat-raised-button color="accent" matTooltip="Save" class="edit-menu-btn"
                     [matTooltipPosition]="'above'" (click)="persistDashboardChanges()"
