[STREAMPIPES-537] Fix layout of data explorer entry page

--- a/ui/src/app/data-explorer/components/overview/data-explorer-dashboard-overview.component.html
+++ b/ui/src/app/data-explorer/components/overview/data-explorer-dashboard-overview.component.html
@@ -17,8 +17,8 @@
   -->
 
 
-<div fxFlex="100" fxLayout="column">
-    <div fxFlex="100" fxLayout="column">
+<div fxLayout="column" class="page-container">
+   <div fxLayout="column">
         <div fxLayout="row" class="fixed-height options-bar page-container-nav sp-tab-bg">
             <div fxLayoutAlign="start center" fxLayout="row" class="pl-10">
                 <button mat-button mat-raised-button color="accent"
@@ -30,8 +30,8 @@
             </div>
         </div>
     </div>
-    <div fxFlex="100" fxLayout="row wrap" fxLayoutAlign="start stretch" class="m-20">
-        <div fxFlex="100" class="assemblyOptions sp-blue-bg p-5">
+    <div fxLayout="column" class="m-20">
+        <div class="assemblyOptions sp-blue-bg p-5">
             <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
                 <h4>My Data Views</h4>
                 <span fxFlex></span>
