[STREAMPIPES-537] Properly delete dashboards in data explorer

--- a/ui/src/app/data-explorer/components/panel/data-explorer-dashboard-panel.component.html
+++ b/ui/src/app/data-explorer/components/panel/data-explorer-dashboard-panel.component.html
@@ -76,7 +76,7 @@
                         <span>Hide time range selector</span>
                     </button>
                     <button mat-menu-item *ngIf="hasDataExplorerDeletePrivileges"
-                        (click)="deleteDashboard(selectedDataViewDashboard)">
+                        (click)="deleteDashboard(dashboard)">
                         <mat-icon>clear</mat-icon>
                         <span>Delete dashboard</span>
                     </button>
