[hotfix] Fix datalake smoke test

--- a/ui/src/app/data-explorer/components/panel/data-explorer-dashboard-panel.component.html
+++ b/ui/src/app/data-explorer/components/panel/data-explorer-dashboard-panel.component.html
@@ -28,7 +28,8 @@
                         color="accent"
                         matTooltip="Back"
                         (click)="goBackToOverview()"
-                        class="edit-menu-btn">
+                        class="edit-menu-btn"
+                        data-cy="save-data-explorer-go-back-to-overview">
                     <mat-icon>arrow_back</mat-icon>
                 </button>
             </div>
