[STREAMPIPES-540] Fix download dialog in data explorer

--- a/ui/src/app/data-explorer/components/data-download-dialog/data-download-dialog.component.scss
+++ b/ui/src/app/data-explorer/components/data-download-dialog/data-download-dialog.component.scss
@@ -16,6 +16,8 @@
  *
  */
 
+@import '../../../../scss/sp/sp-dialog.scss';
+
 example-radio-group {
     display: flex;
     flex-direction: column;
